@@ -76,9 +76,10 @@ PYDIST_OVERRIDES_FNAMES = {
 
 PYDIST_DPKG_SEARCH_TPLS = {
     # implementation: (dpkg -S query, regex filter)
-    'cpython2': ('*/{}-?*.egg-info', r'/python2\../|/pyshared/'),
-    'cpython3': ('*python3/*/{}-?*.egg-info', None),
-    'pypy': ('*/pypy/dist-packages/{}-?*.egg-info', None),
+    'cpython2': ('*/{}-?*.*-info',
+                 r'/(python2\..|pyshared)/.*.(egg|dist)-info$'),
+    'cpython3': ('*python3/*/{}-?*.*-info', r'.(egg|dist)-info$'),
+    'pypy': ('*/pypy/dist-packages/{}-?*.*-info', r'.(egg|dist)-info$'),
 }
 
 # DebHelper related
